--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="550dp"
+        android:layout_marginEnd="8dp"
+        android:text="Ẩn tiêu đề"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!-- Nút Next cho Bài 4: Số nguyên tố -->
+    <Button
+        android:id="@+id/buttonPrime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Số nguyên tố"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"/>
+
+    <!-- Nút Next cho Bài 5: Số chính phương -->
+    <Button
+        android:id="@+id/buttonPerfectSquare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Số chính phương"
+        app:layout_constraintTop_toBottomOf="@id/buttonPrime"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
